# PSD-Figure-Creator

./: .gitignore  DEVLOG.md  README.ja.md  README.md  README.zh.md  __init__.py  psd_loader_node.py  psd_utils.py  pyproject.toml  requirements.txt  server.py
user_data/: sample_1.psd
user_data/models/: sample.psd-model.json  sample2_lswpswset-model.psd-model.json
user_data/poses/: pose1.pose.json  pose2.pose.json  project-psw.pose.json
web/css/: psd_loader.css
web/js/: gif_encoder.js  i18n.js  psd_loader.js  psd_pose_editor.js
